--- a/.github/workflows/readme.yaml
+++ b/.github/workflows/readme.yaml
@@ -13,3 +13,13 @@ permissions:
 
 jobs:
   generate-readme:
+  	runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '16'
