--- a/.github/workflows/readme.yaml
+++ b/.github/workflows/readme.yaml
@@ -25,7 +25,7 @@ jobs:
           node-version: '16'
 
       - name: install dependencies
-        run: npm install jsdom
+        run: npm install 'jsdom'
       
       - name: Testing
         run: node -e "
@@ -45,8 +45,9 @@ jobs:
           
           // Write to README.md
           fs.writeFileSync('README.md', readmeContent);"
+          
       - name: GitPull
-        run:           
+        run: |    
             git config --global user.name "github-actions[bot]"
             git config --global user.email "github-actions[bot]@users.noreply.github.com"
             git add README.md
